[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/TranqGunScript.gd" type="Script" id=2]
[ext_resource path="res://Player/WorldViewport.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.381343
height = 0.94

[sub_resource type="SphereMesh" id=2]
radius = 0.85
height = 1.7

[sub_resource type="Animation" id=3]
resource_name = "Crouch"
length = 0.4
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("CamY:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CamY:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0, -0.15, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CamY:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("CamY:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CamY:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CamY:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="CapsuleShape" id=5]
radius = 0.381343
height = 0.47

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00337374, 0.00248778, 0.00365704 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CamY" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )

[node name="CamX" type="Spatial" parent="CamY"]

[node name="Camera" type="Camera" parent="CamY/CamX"]

[node name="InteractionCast" type="RayCast" parent="CamY/CamX/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1.9 )
collision_mask = 5
collide_with_areas = true

[node name="Equipped" type="Spatial" parent="CamY/CamX/Camera"]

[node name="TranqGunWIP" type="Spatial" parent="CamY/CamX/Camera/Equipped"]
script = ExtResource( 2 )
speed = -200

[node name="Body" type="CSGBox" parent="CamY/CamX/Camera/Equipped/TranqGunWIP"]
transform = Transform( 0.0365288, 0, 0, 0, 0.0365288, 0, 0, 0, 0.126269, 0.465883, -0.377412, -0.573542 )
cast_shadow = 0

[node name="SpawnPoint" type="Spatial" parent="CamY/CamX/Camera/Equipped/TranqGunWIP/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5368 )

[node name="RemoteTransform" type="RemoteTransform" parent="CamY/CamX/Camera"]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="HeadTest" type="Spatial" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="HeadTest"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.237186, 0 )
shape = SubResource( 5 )

[node name="PlayerGlow" type="OmniLight" parent="."]
light_color = Color( 0.682353, 0.670588, 1, 1 )
light_energy = 0.0
light_bake_mode = 0
omni_range = 10.0
omni_attenuation = 1.56917

[node name="WorldViweport" parent="." instance=ExtResource( 3 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
